# hello-rust-cli

./: Cargo.toml  meson.build
src/: meson.build
